iniciando dashboard principal

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -28,15 +28,238 @@
 
         </nav>
     </header>
-    
+
     <main>
         <article>
+            <span>Energia renovável impulsionada por tecnologia, transformando o presente para um futuro
+                sustentável.</span>
+
+            <div class="titulo1">
+                <h1>EcoLogic Management Software</h1>
+            </div>
+            <div class="text1"></div>
+            <p>Com o EcoLogic, você monitora em tempo real a produção de energia da sua usina solar, eólica ou
+                hidrelétrica, tudo em uma plataforma simples e intuitiva. Controle total, eficiência garantida e
+                relatórios detalhados para otimizar sua produção e impulsionar a sustentabilidade.</p>
+            </div>
+
+            <div class="contactus">
+                <button type="button">Contact us</button>
+
+                <div class="energiaeolica">
+                    <img src="../../images/energiaeolica.png" alt="energiaeolica">
+                </div>
+
+                <div class="barradireita">
+                    <img src="../../images/barradireita.png" alt="barradireita">
+                </div>
+
+                <div class="grafico1">
+                    <img src="../../images/grafico1.png" alt="grafico">
+                </div>
+
+                <div class="titulo2">
+                    <span>Maximize o Potencial da Sua Usina de Energia Renovável com o <strong>EcoLogic!</strong></span>
+                </div>
+                <div class="text2"></div>
+                <ul>
+                    <li>• Acompanhe a geração de energia em tempo real</li>
+                    <li>• Relatórios completos e gráficos de desempenho</li>
+                    <li>• Decisões inteligentes para maximizar o uso de energia limpa</li>
+                </ul>
+            </div>
+
+            <div class="barraesquerda">
+                <img src="../../images/barraesquerda.png" alt="barraesquerda">
+            </div>
+
+            <div class="energiasolar">
+                <img src="../../images/energiasolar.png" alt="energiasolar">
+            </div>
+
+            <div class="energiahidreletrica">
+                <img src="../../images/energiahidreletrica.png" alt="energiahidreletrica">
+            </div>
+
+            <div class="barradireita">
+                <img src="../../images/barradireita1.png" alt="barradireita1">
+            </div>
+
+            <div class="energiageotermica">
+                <img src="../../images/energiageotermica.png" alt="energiageotermica">
+            </div>
+
+            <div class="titulo3">
+                <h3>Sobre Nós</h3>
+            </div>
+            <div class="text3"></div>
+            <p>O EcoLogic é um sistema de gerenciamento de energia renovável desenvolvido por um grupo de estudantes da
+                PUC Minas, no âmbito do projeto "Desenvolvimento de uma Aplicação Interativa" (Eixo 2, Turma 07,
+                2024/2). Nosso objetivo é criar uma plataforma interativa e eficiente para o monitoramento e
+                gerenciamento de usinas de energia renovável, abrangendo fontes como energia solar, eólica e
+                hidrelétrica. O projeto nasceu da nossa paixão por inovação tecnológica e sustentabilidade, visando
+                apoiar o avanço das energias limpas no Brasil e no mundo.</p>
+            </div>
+
+            <div class="titulo4">
+                <h3>Missão</h3>
+            </div>
+            <div class="text4"></div>
+            <p>Desenvolver uma solução tecnológica robusta e acessível para monitorar e gerenciar a produção de energia
+                renovável, permitindo que gestores tomem decisões mais informadas e otimizem o desempenho das usinas,
+                contribuindo diretamente para a transição energética global.</p>
+            </div>
+
+            <div class="biomassa">
+                <img src="../../images/biomassa.png" alt="biomassa">
+            </div>
+
+            <div class="pcgraficos2">
+                <img src="../../images/pcgraficos2.png" alt="pcgraficos2">
+            </div>
+
+            <div class="titulo5">
+                <h2>Resultados</h2>
+            </div>
+            <div class="text5"></div>
+            <ul>
+                <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d_293_29)">
+                            <path
+                                d="M16.376 23.848C9.88 23.848 4.632 18.6 4.632 12.104C4.632 5.608 9.88 0.359999 16.376 0.359999C22.872 0.359999 28.12 5.608 28.12 12.104C28.12 18.6 22.808 23.848 16.376 23.848ZM16.376 21.544C21.592 21.544 25.816 17.32 25.816 12.104C25.816 6.888 21.592 2.664 16.376 2.664C11.16 2.664 6.936 6.888 6.936 12.104C6.936 17.32 11.16 21.544 16.376 21.544ZM15.224 17.992L15.384 13.8L11.864 16.04L10.712 14.056L14.392 12.104L10.712 10.152L11.864 8.168L15.384 10.408L15.224 6.216H17.528L17.368 10.408L20.888 8.168L22.04 10.152L18.36 12.104L22.04 14.056L20.888 16.04L17.368 13.8L17.528 17.992H15.224Z"
+                                fill="#FAAA30" />
+                        </g>
+                        <defs>
+                            <filter id="filter0_d_293_29" x="0.631836" y="0.359985" width="31.4883" height="31.488"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feComposite in2="hardAlpha" operator="out" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_293_29" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_293_29"
+                                    result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+                    Automatizar o gerenciamento de dados de produção, otimizando o tempo dos gestores e reduzindo a
+                    possibilidade de erros manuais.</li>
+                <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d_293_29)">
+                            <path
+                                d="M16.376 23.848C9.88 23.848 4.632 18.6 4.632 12.104C4.632 5.608 9.88 0.359999 16.376 0.359999C22.872 0.359999 28.12 5.608 28.12 12.104C28.12 18.6 22.808 23.848 16.376 23.848ZM16.376 21.544C21.592 21.544 25.816 17.32 25.816 12.104C25.816 6.888 21.592 2.664 16.376 2.664C11.16 2.664 6.936 6.888 6.936 12.104C6.936 17.32 11.16 21.544 16.376 21.544ZM15.224 17.992L15.384 13.8L11.864 16.04L10.712 14.056L14.392 12.104L10.712 10.152L11.864 8.168L15.384 10.408L15.224 6.216H17.528L17.368 10.408L20.888 8.168L22.04 10.152L18.36 12.104L22.04 14.056L20.888 16.04L17.368 13.8L17.528 17.992H15.224Z"
+                                fill="#FAAA30" />
+                        </g>
+                        <defs>
+                            <filter id="filter0_d_293_29" x="0.631836" y="0.359985" width="31.4883" height="31.488"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feComposite in2="hardAlpha" operator="out" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_293_29" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_293_29"
+                                    result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+                    Promover a eficiência energética e o uso consciente dos recursos, ajudando as empresas a reduzir seu
+                    impacto ambiental.</li>
+            </ul>
+            </div>
+            <div class="text5.1"></div>
+            <ul>
+                <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d_293_29)">
+                            <path
+                                d="M16.376 23.848C9.88 23.848 4.632 18.6 4.632 12.104C4.632 5.608 9.88 0.359999 16.376 0.359999C22.872 0.359999 28.12 5.608 28.12 12.104C28.12 18.6 22.808 23.848 16.376 23.848ZM16.376 21.544C21.592 21.544 25.816 17.32 25.816 12.104C25.816 6.888 21.592 2.664 16.376 2.664C11.16 2.664 6.936 6.888 6.936 12.104C6.936 17.32 11.16 21.544 16.376 21.544ZM15.224 17.992L15.384 13.8L11.864 16.04L10.712 14.056L14.392 12.104L10.712 10.152L11.864 8.168L15.384 10.408L15.224 6.216H17.528L17.368 10.408L20.888 8.168L22.04 10.152L18.36 12.104L22.04 14.056L20.888 16.04L17.368 13.8L17.528 17.992H15.224Z"
+                                fill="#FAAA30" />
+                        </g>
+                        <defs>
+                            <filter id="filter0_d_293_29" x="0.631836" y="0.359985" width="31.4883" height="31.488"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feComposite in2="hardAlpha" operator="out" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_293_29" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_293_29"
+                                    result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+                    Facilitar o monitoramento de múltiplas usinas de energia renovável em uma única plataforma.</li>
+                <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g filter="url(#filter0_d_293_29)">
+                            <path
+                                d="M16.376 23.848C9.88 23.848 4.632 18.6 4.632 12.104C4.632 5.608 9.88 0.359999 16.376 0.359999C22.872 0.359999 28.12 5.608 28.12 12.104C28.12 18.6 22.808 23.848 16.376 23.848ZM16.376 21.544C21.592 21.544 25.816 17.32 25.816 12.104C25.816 6.888 21.592 2.664 16.376 2.664C11.16 2.664 6.936 6.888 6.936 12.104C6.936 17.32 11.16 21.544 16.376 21.544ZM15.224 17.992L15.384 13.8L11.864 16.04L10.712 14.056L14.392 12.104L10.712 10.152L11.864 8.168L15.384 10.408L15.224 6.216H17.528L17.368 10.408L20.888 8.168L22.04 10.152L18.36 12.104L22.04 14.056L20.888 16.04L17.368 13.8L17.528 17.992H15.224Z"
+                                fill="#FAAA30" />
+                        </g>
+                        <defs>
+                            <filter id="filter0_d_293_29" x="0.631836" y="0.359985" width="31.4883" height="31.488"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feComposite in2="hardAlpha" operator="out" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_293_29" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_293_29"
+                                    result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+                    Oferecer relatórios completos e gráficos de desempenho Oferecer relatórios detalhados e gráficos
+                    intuitivos para análise da produção de energia e desempenho.</li>
+            </ul>
+            </div>
+
+            <div class="contactus2">
+                <button type="button">Contact us</button>
+            </div>
+
+            <span>Sua <strong>usina</strong>, seu <strong>controle</strong>, seu <strong>impacto positivo</strong> no
+                planeta!</span>
+
+            <div class="logosemfundo"></div>
+            <img src="../../images/logosemfundo.png" alt="Logomarca">
+            </div>
+
+            <div class="contato"></div>
+            <ul>
+                <li>📞 Telefone: (31) 1234-5678</li>
+                <li>📧 E-mail: contato@ecologic.com.br</li>
+                <li>🌐 Website: www.ecologic.com.br</li>
+            </ul>
+            </div>
+            <div class="endereco"></div>
+            <ul>
+                <li>Endereço:</li>
+                <li>Rua da Sustentabilidade, 123</li>
+                <li>Bairro Energias Renováveis</li>
+                <li>Belo Horizonte - MG, CEP: 30123-456</li>
+            </ul>
+            </div>
+            <div class="horario"></div>
+            <span>Horário de Atendimento: Segunda a Sexta, das 9h às 18h.</span>
+            </div>
 
         </article>
     </main>
 
-    <section> 
-        
+    <section>
+
     </section>
 
     <footer>
