atualizacao html dashboard principal

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header>
+
         <nav class="navbar">
 
             <div class="logo">
@@ -31,42 +32,43 @@
 
     <main>
         <article>
+
             <span>Energia renovável impulsionada por tecnologia, transformando o presente para um futuro
                 sustentável.</span>
 
-            <div class="titulo1">
-                <h1>EcoLogic Management Software</h1>
+                <div class="titulo1">
+                    <h1>EcoLogic Management Software</h1>
+                </div>
+                <div class="text1">
+                    <p>Com o EcoLogic, você monitora em tempo real a produção de energia da sua usina solar, eólica ou
+                        hidrelétrica, tudo em uma plataforma simples e intuitiva. Controle total, eficiência garantida e
+                        relatórios detalhados para otimizar sua produção e impulsionar a sustentabilidade.
+                    </p>
+                </div>
+
+            <button type="button" id="btn-contact">Contact us</button>
+
+            <div class="energiaeolica">
+                <img src="../../images/energiaeolica.png" alt="imagem de turbinas eólicas gerando energia renovável">
             </div>
-            <div class="text1"></div>
-            <p>Com o EcoLogic, você monitora em tempo real a produção de energia da sua usina solar, eólica ou
-                hidrelétrica, tudo em uma plataforma simples e intuitiva. Controle total, eficiência garantida e
-                relatórios detalhados para otimizar sua produção e impulsionar a sustentabilidade.</p>
+
+            <div class="barradireita">
+                <img src="../../images/barradireita.png" alt="barradireita">
             </div>
 
-            <div class="contactus">
-                <button type="button">Contact us</button>
+            <div class="grafico1">
+                <img src="../../images/grafico1.png" alt="grafico">
+            </div>
 
-                <div class="energiaeolica">
-                    <img src="../../images/energiaeolica.png" alt="energiaeolica">
-                </div>
-
-                <div class="barradireita">
-                    <img src="../../images/barradireita.png" alt="barradireita">
-                </div>
-
-                <div class="grafico1">
-                    <img src="../../images/grafico1.png" alt="grafico">
-                </div>
-
-                <div class="titulo2">
-                    <span>Maximize o Potencial da Sua Usina de Energia Renovável com o <strong>EcoLogic!</strong></span>
-                </div>
-                <div class="text2"></div>
-                <ul>
-                    <li>• Acompanhe a geração de energia em tempo real</li>
-                    <li>• Relatórios completos e gráficos de desempenho</li>
-                    <li>• Decisões inteligentes para maximizar o uso de energia limpa</li>
-                </ul>
+            <div class="titulo2">
+                <span>Maximize o Potencial da Sua Usina de Energia Renovável com o <strong>EcoLogic!</strong></span>
+            </div>
+            <div class="text2"></div>
+            <ul>
+                <li>• Acompanhe a geração de energia em tempo real</li>
+                <li>• Relatórios completos e gráficos de desempenho</li>
+                <li>• Decisões inteligentes para maximizar o uso de energia limpa</li>
+            </ul>
             </div>
 
             <div class="barraesquerda">
@@ -74,11 +76,11 @@
             </div>
 
             <div class="energiasolar">
-                <img src="../../images/energiasolar.png" alt="energiasolar">
+                <img src="../../images/energiasolar.png" alt="imagem usina solar">
             </div>
 
             <div class="energiahidreletrica">
-                <img src="../../images/energiahidreletrica.png" alt="energiahidreletrica">
+                <img src="../../images/energiahidreletrica.png" alt="imagem usina hidreletrica">
             </div>
 
             <div class="barradireita">
@@ -86,43 +88,37 @@
             </div>
 
             <div class="energiageotermica">
-                <img src="../../images/energiageotermica.png" alt="energiageotermica">
+                <img src="../../images/energiageotermica.png" alt="imagem usina de energia geotermica">
             </div>
 
-            <div class="titulo3">
+            <section id="sobre-nos">
                 <h3>Sobre Nós</h3>
-            </div>
-            <div class="text3"></div>
             <p>O EcoLogic é um sistema de gerenciamento de energia renovável desenvolvido por um grupo de estudantes da
                 PUC Minas, no âmbito do projeto "Desenvolvimento de uma Aplicação Interativa" (Eixo 2, Turma 07,
                 2024/2). Nosso objetivo é criar uma plataforma interativa e eficiente para o monitoramento e
                 gerenciamento de usinas de energia renovável, abrangendo fontes como energia solar, eólica e
                 hidrelétrica. O projeto nasceu da nossa paixão por inovação tecnológica e sustentabilidade, visando
                 apoiar o avanço das energias limpas no Brasil e no mundo.</p>
-            </div>
-
-            <div class="titulo4">
+            </section>
+           
+            <section id="missao">
                 <h3>Missão</h3>
-            </div>
-            <div class="text4"></div>
             <p>Desenvolver uma solução tecnológica robusta e acessível para monitorar e gerenciar a produção de energia
                 renovável, permitindo que gestores tomem decisões mais informadas e otimizem o desempenho das usinas,
                 contribuindo diretamente para a transição energética global.</p>
-            </div>
+            </section>
 
             <div class="biomassa">
-                <img src="../../images/biomassa.png" alt="biomassa">
+                <img src="../../images/biomassa.png" alt="imagem usina biomassa">
             </div>
 
             <div class="pcgraficos2">
-                <img src="../../images/pcgraficos2.png" alt="pcgraficos2">
+                <img src="../../images/pcgraficos2.png" alt="tela de computador com imagens de graficos">
             </div>
 
-            <div class="titulo5">
+            <section id="resultados">
                 <h2>Resultados</h2>
-            </div>
-            <div class="text5"></div>
-            <ul>
+            <ul class="resultados">
                 <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g filter="url(#filter0_d_293_29)">
                             <path
@@ -172,9 +168,7 @@
                     Promover a eficiência energética e o uso consciente dos recursos, ajudando as empresas a reduzir seu
                     impacto ambiental.</li>
             </ul>
-            </div>
-            <div class="text5.1"></div>
-            <ul>
+            <ul class="resultados1">
                 <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g filter="url(#filter0_d_293_29)">
                             <path
@@ -223,43 +217,41 @@
                     Oferecer relatórios completos e gráficos de desempenho Oferecer relatórios detalhados e gráficos
                     intuitivos para análise da produção de energia e desempenho.</li>
             </ul>
-            </div>
+            </section>
 
-            <div class="contactus2">
-                <button type="button">Contact us</button>
-            </div>
-
-            <span>Sua <strong>usina</strong>, seu <strong>controle</strong>, seu <strong>impacto positivo</strong> no
-                planeta!</span>
-
-            <div class="logosemfundo"></div>
-            <img src="../../images/logosemfundo.png" alt="Logomarca">
-            </div>
-
-            <div class="contato"></div>
-            <ul>
-                <li>📞 Telefone: (31) 1234-5678</li>
-                <li>📧 E-mail: contato@ecologic.com.br</li>
-                <li>🌐 Website: www.ecologic.com.br</li>
-            </ul>
-            </div>
-            <div class="endereco"></div>
-            <ul>
-                <li>Endereço:</li>
-                <li>Rua da Sustentabilidade, 123</li>
-                <li>Bairro Energias Renováveis</li>
-                <li>Belo Horizonte - MG, CEP: 30123-456</li>
-            </ul>
-            </div>
-            <div class="horario"></div>
-            <span>Horário de Atendimento: Segunda a Sexta, das 9h às 18h.</span>
-            </div>
+            <button type="button" id="btn-contact">Contact us</button>
 
         </article>
     </main>
 
     <section>
+        <span>Sua <strong>usina</strong>, seu <strong>controle</strong>, seu <strong>impacto positivo</strong> no
+            planeta!</span>
 
+        <div class="logosemfundo"></div>
+        <img src="../../images/logosemfundo.png" alt="logomarca">
+        </div>
+
+        <div class="contato"></div>
+        <ul>
+            <li>📞 Telefone: (31) 1234-5678</li>
+            <li>📧 E-mail: contato@ecologic.com.br</li>
+            <li>🌐 Website: www.ecologic.com.br</li>
+        </ul>
+        </div>
+
+        <div class="endereco"></div>
+        <ul>
+            <li>Endereço:</li>
+            <li>Rua da Sustentabilidade, 123</li>
+            <li>Bairro Energias Renováveis</li>
+            <li>Belo Horizonte - MG, CEP: 30123-456</li>
+        </ul>
+        </div>
+        
+        <div class="horario"></div>
+        <span>Horário de Atendimento: Segunda a Sexta, das 9h às 18h.</span>
+        </div>
     </section>
 
     <footer>
@@ -274,7 +266,6 @@
             </div>
         </div>
     </footer>
-
 
 </body>
 
