atualizacao codigos dashboard

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -35,7 +35,7 @@
 
             <span>Energia renovável impulsionada por tecnologia, transformando o presente para um futuro
                 sustentável.</span>
-
+                <div class="container">
                 <div class="titulo1">
                     <h1>EcoLogic Management Software</h1>
                 </div>
@@ -51,6 +51,7 @@
             <div class="energiaeolica">
                 <img src="../../images/energiaeolica.png" alt="imagem de turbinas eólicas gerando energia renovável">
             </div>
+        </div>
 
             <div class="barradireita">
                 <img src="../../images/barradireita.png" alt="barradireita">
