atualizacao css e html dashboard

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -39,7 +39,8 @@
             <div class="container">
                 <div class="content">
 
-                    <div class="part1" style="flex: 1;">
+                    <div style="flex: 1;">
+
                         <h1 class="titulo1">EcoLogic Management Software</h1>
                         <p class="text1">Com o EcoLogic, você monitora em tempo real a produção de energia da sua usina
                             solar, eólica ou
@@ -51,27 +52,21 @@
                         <div style="display: flex;">
                             <button type="button" id="btn-contact">Contact us</button>
                         </div>
+
                     </div>
 
                     <div class="energiaeolica">
-                        <img src="../../images/energiaeolica.png" alt="imagem de turbinas eólicas gerando energia renovável">
+                        <img src="../../images/energiaeolica.png"
+                            alt="imagem de turbinas eólicas gerando energia renovável">
                     </div>
 
                 </div>
             </div>
 
+
+
+
             
-
-            
-            </div>
-
-
-
-
-
-
-
-
             <div class="barradireita">
                 <img src="../../images/barradireita.png" alt="barradireita">
             </div>
