atualizacao css dashboard

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -10,6 +10,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap" rel="stylesheet">
     <title>EcoLogic - Gerenciamento de Energia Renovável</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -66,10 +69,21 @@
 
 
 
-            
             <div class="barradireita">
-                <img src="../../images/barradireita.png" alt="barradireita">
+                <div class="texto-sobre-imagem">
+                    <p>Número Total de Usinas Cadastradas:</p>
+                </div>
+                <div>
+                    <span class="numero-usinas">16</span>
+                    <img src="../../images/barradireita.png" alt="barradireita">
+                </div>
             </div>
+
+
+
+
+
+
 
             <div class="grafico1">
                 <img src="../../images/grafico1.png" alt="grafico">
