atualizacao codigos dashboard

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -39,6 +39,15 @@
             <span>Energia renovável impulsionada por tecnologia, transformando o presente para um futuro
                 sustentável.</span>
 
+
+
+
+
+
+
+
+
+
             <div class="container">
                 <div class="content">
 
@@ -68,7 +77,6 @@
 
 
 
-
             <div class="barradireita">
                 <div class="texto-sobre-imagem">
                     <p>Número Total de Usinas Cadastradas:</p>
@@ -81,28 +89,52 @@
 
 
 
+            <div class="container1">
+                <div class="content1">
 
+                    <div class="grafico1">
+                        <img src="../../images/grafico1.png" alt="grafico">
+                    </div>
 
-
-
-            <div class="grafico1">
-                <img src="../../images/grafico1.png" alt="grafico">
+                        <div style="flex: 1;">
+                            <div class="titulo2">
+                                <span>Maximize o Potencial da Sua Usina de Energia Renovável com o
+                                <strong>EcoLogic!</strong></span>
+                            </div>
+                            
+                            <div class="text2">
+                            <ul>
+                                <li>Acompanhe a geração de energia em tempo real</li>
+                                <li>Relatórios completos e gráficos de desempenho</li>
+                                <li>Decisões inteligentes para maximizar o uso de energia limpa</li>
+                            </ul>
+                            </div>
+                        </div>
+                </div>
             </div>
 
-            <div class="titulo2">
-                <span>Maximize o Potencial da Sua Usina de Energia Renovável com o <strong>EcoLogic!</strong></span>
-            </div>
-            <div class="text2"></div>
-            <ul>
-                <li>• Acompanhe a geração de energia em tempo real</li>
-                <li>• Relatórios completos e gráficos de desempenho</li>
-                <li>• Decisões inteligentes para maximizar o uso de energia limpa</li>
-            </ul>
-            </div>
+
+
+
+
+
 
             <div class="barraesquerda">
-                <img src="../../images/barraesquerda.png" alt="barraesquerda">
+                <div class="texto-sobre-imagem1">
+                    <p>Número Total de Fontes de Energia:</p>
+                </div>
+                <div>
+                    <span class="numero-fontes">20</span>
+                    <img src="../../images/barraesquerda.png" alt="barraesquerda">
+                </div>
             </div>
+
+
+
+
+
+
+
 
             <div class="energiasolar">
                 <img src="../../images/energiasolar.png" alt="imagem usina solar">
