atualizacao html e css dashboard

--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -39,18 +39,8 @@
             <span>Energia renovável impulsionada por tecnologia, transformando o presente para um futuro
                 sustentável.</span>
 
-
-
-
-
-
-
-
-
-
             <div class="container">
                 <div class="content">
-
                     <div style="flex: 1;">
 
                         <h1 class="titulo1">EcoLogic Management Software</h1>
@@ -60,11 +50,9 @@
                             garantida e
                             relatórios detalhados para otimizar sua produção e impulsionar a sustentabilidade.
                         </p>
-
                         <div style="display: flex;">
                             <button type="button" id="btn-contact">Contact us</button>
                         </div>
-
                     </div>
 
                     <div class="energiaeolica">
@@ -75,19 +63,16 @@
                 </div>
             </div>
 
-
-
             <div class="barradireita">
                 <div class="texto-sobre-imagem">
                     <p>Número Total de Usinas Cadastradas:</p>
                 </div>
+
                 <div>
                     <span class="numero-usinas">16</span>
                     <img src="../../images/barradireita.png" alt="barradireita">
                 </div>
             </div>
-
-
 
             <div class="container1">
                 <div class="content1">
@@ -96,31 +81,26 @@
                         <img src="../../images/grafico1.png" alt="grafico">
                     </div>
 
-                        <div style="flex: 1;">
-                            <div class="titulo2">
-                                <span>Maximize o Potencial da Sua Usina de Energia Renovável com o
+                    <div style="flex: 1;">
+                        <div class="titulo2">
+                            <span>Maximize o Potencial da Sua Usina de Energia Renovável com o
                                 <strong>EcoLogic!</strong></span>
-                            </div>
-                            
-                            <div class="text2">
+                        </div>
+                        <div class="text2">
                             <ul>
                                 <li>Acompanhe a geração de energia em tempo real</li>
                                 <li>Relatórios completos e gráficos de desempenho</li>
                                 <li>Decisões inteligentes para maximizar o uso de energia limpa</li>
                             </ul>
-                            </div>
                         </div>
+        
+                    </div>
+
                 </div>
             </div>
 
-
-
-
-
-
-
             <div class="barraesquerda">
-                <div class="texto-sobre-imagem1">
+                <div class="texto-sobre-imagem1">  
                     <p>Número Total de Fontes de Energia:</p>
                 </div>
                 <div>
@@ -128,13 +108,6 @@
                     <img src="../../images/barraesquerda.png" alt="barraesquerda">
                 </div>
             </div>
-
-
-
-
-
-
-
 
             <div class="energiasolar">
                 <img src="../../images/energiasolar.png" alt="imagem usina solar">
@@ -144,9 +117,30 @@
                 <img src="../../images/energiahidreletrica.png" alt="imagem usina hidreletrica">
             </div>
 
+
+
+            <div class="barradireita1">
+                <div class="texto-sobre-imagem">
+                    <p>Número Total de Usinas Cadastradas:</p>
+                </div>
+
+                <div>
+                    <span class="numero-usinas">16</span>
+                    <img src="../../images/barradireita1.png" alt="barradireita">
+                </div>
+            </div>
+
+
             <div class="barradireita">
                 <img src="../../images/barradireita1.png" alt="barradireita1">
             </div>
+
+
+
+
+
+
+
 
             <div class="energiageotermica">
                 <img src="../../images/energiageotermica.png" alt="imagem usina de energia geotermica">
