--- a/src/EcoLogic/pages/fonte/index.html
+++ b/src/EcoLogic/pages/fonte/index.html
@@ -27,6 +27,10 @@
             </div>
 
         </nav>
+        <h1 id="GFE">Gerenciador - Fontes de Energia</h1>
+        <h2 id="EMS">Ecologic Management Software</h2>
+        <h3 id="NTFE">Número Total de Fontes de Energia:</h3>
+         
     </header>
 
     <aside>
