--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -120,25 +120,15 @@
 
 
             <div class="barradireita1">
-                <div class="texto-sobre-imagem">
-                    <p>Número Total de Usinas Cadastradas:</p>
+                <div class="texto-sobre-imagem2">
+                    <p>Total de Produção de Energia:</p>
                 </div>
 
                 <div>
-                    <span class="numero-usinas">16</span>
+                    <span class="numero-producaoeng">278.560 kWh</span>
                     <img src="../../images/barradireita1.png" alt="barradireita">
                 </div>
             </div>
-
-
-            <div class="barradireita">
-                <img src="../../images/barradireita1.png" alt="barradireita1">
-            </div>
-
-
-
-
-
 
 
 
