--- a/src/EcoLogic/pages/dashboard/index.html
+++ b/src/EcoLogic/pages/dashboard/index.html
@@ -117,8 +117,6 @@
                 <img src="../../images/energiahidreletrica.png" alt="imagem usina hidreletrica">
             </div>
 
-
-
             <div class="barradireita1">
                 <div class="texto-sobre-imagem2">
                     <p>Total de Produção de Energia:</p>
@@ -130,30 +128,18 @@
                 </div>
             </div>
 
-
-
             <div class="energiageotermica">
                 <img src="../../images/energiageotermica.png" alt="imagem usina de energia geotermica">
             </div>
 
             <section id="sobre-nos">
-                <h3>Sobre Nós</h3>
-                <p>O EcoLogic é um sistema de gerenciamento de energia renovável desenvolvido por um grupo de estudantes
-                    da
-                    PUC Minas, no âmbito do projeto "Desenvolvimento de uma Aplicação Interativa" (Eixo 2, Turma 07,
-                    2024/2). Nosso objetivo é criar uma plataforma interativa e eficiente para o monitoramento e
-                    gerenciamento de usinas de energia renovável, abrangendo fontes como energia solar, eólica e
-                    hidrelétrica. O projeto nasceu da nossa paixão por inovação tecnológica e sustentabilidade, visando
-                    apoiar o avanço das energias limpas no Brasil e no mundo.</p>
+                <h1 class="titulo3">Sobre Nós</h1>
+                <p class="text3">O EcoLogic é um sistema de gerenciamento de energia renovável desenvolvido por um grupo de estudantes da PUC Minas, no âmbito do projeto "Desenvolvimento de uma Aplicação Interativa" (Eixo 2, Turma 07, 2024/2). Nosso objetivo é criar uma plataforma interativa e eficiente para o monitoramento e gerenciamento de usinas de energia renovável, abrangendo fontes como energia solar, eólica e hidrelétrica. O projeto nasceu da nossa paixão por inovação tecnológica e sustentabilidade, visando apoiar o avanço das energias limpas no Brasil e no mundo.</p>
             </section>
 
             <section id="missao">
-                <h3>Missão</h3>
-                <p>Desenvolver uma solução tecnológica robusta e acessível para monitorar e gerenciar a produção de
-                    energia
-                    renovável, permitindo que gestores tomem decisões mais informadas e otimizem o desempenho das
-                    usinas,
-                    contribuindo diretamente para a transição energética global.</p>
+                <h1 class="titulo4">Missão</h1>
+                <p class="text4">Desenvolver uma solução tecnológica robusta e acessível para monitorar e gerenciar a produção de energia renovável, permitindo que gestores tomem decisões mais informadas e otimizem o desempenho das usinas, contribuindo diretamente para a transição energética global.</p>
             </section>
 
             <div class="biomassa">
@@ -165,7 +151,7 @@
             </div>
 
             <section id="resultados">
-                <h2>Resultados</h2>
+                <h1 class="titulo5">Resultados</h2>
                 <ul class="resultados">
                     <li><svg width="33" height="32" viewBox="0 0 33 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g filter="url(#filter0_d_293_29)">
